updated html content to existing about me web page

--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1> Khoa Nguyen </h1>
-        <script src="" async defer></script>
-    </body>
+
+<html lang="en-us">
+
+<header>
+    <meta charset="UTF-8">
+    <Title> About Me </Title>
+</header>
+
+<body>
+    <h1> Student Bio </h1>
+    <h2> Khoa Nguyen </h2>
+
+    <img src="#" alt="#">
+
+    <p>
+        My full name is Khoa Anh Nguyen and I am 24 years old. 
+        Born in Vietnam, my family and I came here in 1995 when I was super young. 
+        Since then, I have pretty much lived in Seattle my entire life. 
+        I attended colleged at Davidson College in North Carolina. I now work in environmental consulting. 
+    </p>
+
+    <h2> Contact Info </h2>
+    <ul>
+        <li><strong> Email: </strong><a href="#" target="_blank"> kh.nguyen0101@gmail.com </a></li>
+        <li><strong> Github: </strong><a href="#" target="_blank"> khnguyen94 </a></li>
+        <li><strong> Portfolio </strong><a href="#" target="_blank"> Coming Soon! </a></li>
+    </ul>
+
+</body>
+
+
 </html>
