changed a misspelling in the main about me paragraph

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         My full name is Khoa Anh Nguyen and I am 24 years old. 
         Born in Vietnam, my family and I came here in 1995 when I was super young. 
         Since then, I have pretty much lived in Seattle my entire life. 
-        I attended colleged at Davidson College in North Carolina. I now work in environmental consulting. 
+        I attended college at Davidson College in North Carolina. I now work in environmental consulting. 
     </p>
 
     <h2> Contact Info </h2>
